Add syntax fixes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <input name="password" type="password" placeholder="Password">
             </p>
             <p>
-                <input name="submit" type="submit" placeholder="submit">
+                <input name="submit" type="submit" placeholder="submit" a href="thankyou.html">
             </p>
         </div>
     </form>
