--- a/thankyou.html
+++ b/thankyou.html
@@ -17,7 +17,7 @@
 
     <h3>INTRODUCTION</h3>
     <p>
-        Welcome to my first webpage written with HTML, CSS, JavaScript, and Python for an assignment in
+        Welcome to my first webpage written with HTML and CSS for an assignment in
         <a href="https://online-learning.harvard.edu/course/computer-science-business-professionals">Harvard
             University's Computer Science for Business Professionals</a>. This preliminary webpage serves as a token
         of appreciation to the CS50 staff and is targeted towards those interested in learning more about the
@@ -55,8 +55,9 @@
     <p>
         As mentioned above, these lessons are pertinent to anyone wanting to grasp introductory concepts to computer
         science. Brian Yu's melodic rendition of the CS50 introduction in the first video most likely sums up the
-        emotions of anyone who has had the privelage of learning the material thus far. It hasn't been easy, yet the
-        journey has been exciting nonetheless. Feel free to cue the intro and watch the lectures below:
+        emotions of anyone who has had the privelage of learning the material thus far. It hasn't been easy but the
+        journey has been exciting nonetheless. Feel free to cue the intro and watch the lectures alongside a
+        supplementary podcast below:
     </p>
 
     <div style="text-align:center;">
