--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <img class="logo" src="logo.png" alt="Harvard Logo" height="100" width="100">
     </div>
 
-    <form>
+    <form action="thankyou.html">
         <div class="namepassword">
             <p>
                 The link to the GitHub repository for this project can be found <a
-                    href="https://github.com/hbweaver/CS50_web_development">here</a>. In the README.md, look for the
-                public username and password values. If there are any questions, please email holdenbweaver1@gmail.com.
+                    href="https://github.com/hbweaver/CS50">here</a>. Click the submit button to access
+                content. If there are any questions, please email holdenbweaver1@gmail.com.
             </p>
             <p>
                 <input name="username" type="text" placeholder="Username">
