--- a/thankyou.html
+++ b/thankyou.html
@@ -33,7 +33,7 @@
         emphasized alongside time and space complexities - wherein trade-offs and optimization scenarios are
         explained. The course structure was a big help into being able to grasp what used to be challenging,
         abstract ideas and I can say with full confidence I have learned more useful information in this class than
-        any other.
+        most other.
     </p>
 
     <p>
@@ -55,7 +55,7 @@
     <p>
         As mentioned above, these lessons are pertinent to anyone wanting to grasp introductory concepts to computer
         science. Brian Yu's melodic rendition of the CS50 introduction in the first video most likely sums up the
-        emotions of anyone who has had the privelage of learning the material thus far. It hasn't been easy but the
+        emotions of anyone who has had the privelage of learning the material. It hasn't been easy but the
         journey has been exciting nonetheless. Feel free to cue the intro and watch the lectures alongside a
         supplementary podcast below:
     </p>
