Modify css background

--- a/thankyou.html
+++ b/thankyou.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" name="viewport" content="width-device-width" initial-scale=1.0>
     <title>Harvard CS50 | Holden B. Weaver</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -89,13 +89,23 @@
     <p>
         <hr>
         <footer>
+
+            <div style="text-align: center;">
+
+                <p>
+                    <small>Disclaimer: This site contains copyrighted material the use of which has not always been
+                        specifically authorized by the copyright owner. Any use of copyrighted material from this page
+                        or elsewhere on the site is done so for educational purposes only and constitutes 'fair use' as
+                        provided in Section 107 of the US Copyright Law. In accordance with Title 17 U.S.C. Section 107,
+                        the material on this site is distributed without profit to those who have expressed a prior
+                        interest in receiving the included information for research and educational purposes.</small>
+                </p>
+            </div>
+
             <div class="socialmedia" style="text-align: center;">
                 <img class="github" src="GitHub-Mark-Light-32px.png" alt="Holden Weaver GitHub" />
                 <img class="linkedin" src="linkedin.png" width="32px" height="32px" alt="Holden Weaver LinkedIn" />
-                <img class="twitter" src="Twitter_Social_Icon_Circle_White.png" height="32px" alt="Holden Weaver" />
-            </div>
-
-            <div style="text-align: center;">
+                <img class="twitter" src="Twitter_Social_Icon_Circle_White.png" height="32px" alt="Holden Weaver" /><br>
                 <small>&copy; Copyright 2020 | Holden Brooks Weaver</small>
             </div>
         </footer>
