--- a/thankyou.html
+++ b/thankyou.html
@@ -33,7 +33,7 @@
         emphasized alongside time and space complexities - wherein trade-offs and optimization scenarios are
         explained. The course structure was a big help into being able to grasp what used to be challenging,
         abstract ideas and I can say with full confidence I have learned more useful information in this class than
-        most other.
+        most others.
     </p>
 
     <p>
