--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <head>
     <meta charset="utf-8" name="viewport" content="width-device-width" initial-scale=1.0>
+    <meta name="google-site-verification" content="VnPHoJlBJOrLDF8Mm0tw3kuEJNuv7eUziA9CNBbV6Nk" />
+
     <title>Harvard CS50 | Holden B. Weaver</title>
     <link rel="stylesheet" href="styles.css">
 </head>
